--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@azure/communication-chat": "^1.6.0",
     "@azure/communication-common": "^2.4.0",
+    "@microsoft/signalr": "^10.0.0",
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
